FIX: Animation issue when mobile search is visible

--- a/src/surfaces/actionBar/actionBar.scss
+++ b/src/surfaces/actionBar/actionBar.scss
@@ -358,7 +358,7 @@ $backwards-step4-duration: $standard-fifth-timing;
     .action_bar--search-with-select {
         display: flex;
 
-        &.action_bar--search-mobile-show {
+        &-menu-open-mobile {
             overflow: unset;
         }
 
